# Herdify

./: .gitattributes  .gitignore  RALPH.md  README.md  TODO.md  pyproject.toml
src/herdify/: __init__.py  main.py  mcp_server.py  ralph.py  tasks.py
src/herdify/ui/: __init__.py
