[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "herdify"
version = "0.1.0"
description = "Desktop tool for managing AI agents via ralphify — named after Walter the Corgi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.24.0",
    "fastmcp>=2.0.0",
    "ralphify>=0.1.0",
    "anthropic>=0.40.0",
]

[project.scripts]
herdify = "herdify.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/herdify"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
